force-app/packaged/main/default/objects/Provisioning_Manifest__c/Provisioning_Manifest__c.object-meta.xml
<CustomObject>
    <label>Provisioning Manifest</label>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>