force-app/packaged/main/default/objects/Provisioning_Manifest__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>