force-app/packaged/main/default/objects/Provisioning_Manifest__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <label>Edition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>