force-app/packaged/main/default/objects/Provisioning_Manifest__c/fields/Trialforce_Template__c.field-meta.xml
<CustomField>
    <fullName>Trialforce_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trialforce Template</label>
    <referenceTo>Trialforce_Template__c</referenceTo>
    <relationshipLabel>Provisioning Manifests</relationshipLabel>
    <relationshipName>Provisioning_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>