force-app/packaged/main/default/objects/Provisioning_Manifest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Country__c</columns>
    <columns>Edition__c</columns>
    <columns>Username__c</columns>
    <columns>Trialforce_Template__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>